platform/k8s/base/services/audit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit
  namespace: atlas
  labels:
    app: audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: audit
        component: backend
    spec:
      containers:
        - name: audit
          image: nitros64/audit-service:1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8093
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "700m"
              memory: "1Gi"
              
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8093
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8093
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8093
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
