platform/k8s/base/services/audit/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-audit
spec:
  selector:
    app: postgres-audit
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
