platform/k8s/base/services/audit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-service
spec:
  selector:
    app: audit
  ports:
    - name: http
      port: 80
      targetPort: 8093
  type: ClusterIP
